--- a/src/locales/mr/translation.json
+++ b/src/locales/mr/translation.json
@@ -397,5 +397,320 @@
     }
   ]
     }
+  },
+"SolarBuyingguid2": {
+  "Content": {
+    "faqs": [
+      {
+        "question": "ऑन-ग्रिड सोलरला बॅटरीची गरज आहे का?",
+        "answer": "नाही. ऑन-ग्रिड सोलर सिस्टिमचे हेच सौंदर्य आहे. ऑफ-ग्रिड आणि हायब्रिड सोलर सिस्टिमप्रमाणे याला बॅटरीची गरज नसते. त्यामुळे देखभाल सोपी होते आणि हा तीनही प्रकारांपैकी सर्वात स्वस्त पर्याय ठरतो."
+      },
+      {
+        "question": "सोलर पॅनेल रात्री काम करतात का?",
+        "answer": "नाही. सोलर पॅनेल सूर्यप्रकाशातील फोटॉन्स PV सेलमधील इलेक्ट्रॉन्सला ढकलतात तेव्हा वीज निर्माण होते. रात्री सूर्यप्रकाश नसल्यामुळे ऑन-ग्रिड सोलर सिस्टिम घर चालवण्यासाठी ग्रिडमधून वीज घेते."
+      },
+      {
+        "question": "ऑन-ग्रिड आणि हायब्रिड सोलर सिस्टिममध्ये काय फरक आहे?",
+        "answer": "मुख्य फरक असा की हायब्रिड सिस्टिम ग्रिड आणि बॅटरी दोन्हींशी जोडलेली असते, तर ऑन-ग्रिड सोलर सिस्टिम फक्त ग्रिडशी जोडलेली असते."
+      },
+      {
+        "question": "भारतामध्ये ऑन-ग्रिड सोलर पॅनेलची किंमत किती आहे?",
+        "answer": "किंमत सोलर पॅनेलच्या प्रकारावर अवलंबून असते. उदाहरणार्थ, भारतातील नवीन MonoPERC हाफ-कट सोलर पॅनेलची किंमत प्रति वॅट ₹24 आहे."
+      }
+    ],
+
+    "advantages": {
+      "adv1": {
+        "title": "उर्जा उत्पादन मॉनिटरिंग",
+        "desc": "तुमच्या सोलर सिस्टिमने निर्माण केलेल्या वीज युनिट्सचा मागोवा ठेवणे सोपे आहे",
+        "icon": "adv1"
+      },
+      "adv2": {
+        "title": "सोपे सोलर बिलिंग",
+        "desc": "सोलर वीज बिल समजणे अधिक सोपे होते",
+        "icon": "adv2"
+      },
+      "adv3": {
+        "title": "जलद गुंतवणूक परतावा आणि दशकांपर्यंत मोफत वीज",
+        "desc": "3 ते 5 वर्षांत सोलर ऑन-ग्रिड सिस्टिमची किंमत वसूल झाली की, पुढील 20–22 वर्षे मोफत सोलर वीज मिळते",
+        "icon": "adv3"
+      },
+      "adv4": {
+        "title": "लक्षणीय मासिक बचत",
+        "desc": "मासिक वीज बिलात मोठी कपात होते",
+        "icon": "adv4"
+      },
+      "adv5": {
+        "title": "बॅटरीची आवश्यकता नाही",
+        "desc": "ग्रिडच बॅटरीचे काम करते. जास्त युनिट्स थेट ग्रिडला जातात आणि गरजेप्रमाणे परत घेतले जातात",
+        "icon": "adv5"
+      },
+      "adv6": {
+        "title": "बॅटरी बदलण्याचा खर्च नाही",
+        "desc": "बॅटरी नसल्यामुळे बॅटरी बदलण्याचा कोणताही खर्च नसतो",
+        "icon": "adv6"
+      },
+      "adv7": {
+        "title": "सर्वात किफायतशीर सोलर पर्याय",
+        "desc": "तीन प्रकारांमध्ये घरांसाठी ऑन-ग्रिड सोलर सिस्टिम हा सर्वात परवडणारा पर्याय आहे",
+        "icon": "adv7"
+      },
+      "adv8": {
+        "title": "एक्सक्लुसिव्ह सोलर सबसिडी",
+        "desc": "DCR पॅनेल वापरणाऱ्या घरांसाठी सरकार फक्त ऑन-ग्रिड सोलर सिस्टिमवरच सबसिडी देते",
+        "icon": "adv8"
+      }
+    },
+
+    "installationSteps": {
+      "step1": {
+        "step": 1,
+        "title": "रूफटॉप तपासणी आणि साइट मूल्यांकन",
+        "desc": "तज्ञ अभियंता छतावरील सावली निर्माण करणाऱ्या वस्तूंचे मॅपिंग करतो आणि भारतात सामान्यतः दक्षिण दिशेकडे पॅनेल लावण्याच्या दृष्टीने योग्य दिशा व झुकाव निश्चित करतो. ही तपासणी सूर्यप्रकाशाचा जास्तीत जास्त वापर आणि दीर्घकालीन ऊर्जा उत्पादन सुनिश्चित करते."
+      },
+      "step2": {
+        "step": 2,
+        "title": "छतावरील माउंटिंग आणि पॅनेल क्लॅम्पिंग",
+        "desc": "माउंटिंग स्ट्रक्चर छतावर गंज-प्रतिरोधक रेल्स आणि फास्टनर्सने सुरक्षितरीत्या बसवले जातात. नंतर पॅनेल उत्पादकांच्या टॉर्क-विशेष सूचना वापरून या रेल्सवर क्लॅम्प केले जातात, ज्यामुळे पॅनेलचे नुकसान होऊ नये."
+      },
+      "step3": {
+        "step": 3,
+        "title": "इन्व्हर्टर इंस्टॉलेशन आणि इलेक्ट्रिकल वायरिंग",
+        "desc": "सोलर स्ट्रिंग्स DC कॉम्बिनर बॉक्समध्ये आणल्या जातात, नंतर इन्व्हर्टरमध्ये, जो DC वीज AC मधे बदलतो. AC आउटपुट AC कॉम्बिनर बॉक्समधून द्विदिशा मीटरकडे पाठवले जाते, आणि सर्व केबल्स कंड्युट किंवा ट्रे मध्ये सुरक्षित ठेवले जातात."
+      },
+      "step4": {
+        "step": 4,
+        "title": "अर्थिंग आणि लाइटनिंग संरक्षण",
+        "desc": "DC आणि AC दोन्ही घटकांना सुरक्षिततेसाठी अर्थिंग रॉड आणि केबल्सने जमिनीशी जोडले जाते. पॅनेलच्या वर बसवलेला लाइटनिंग अरेस्टर विजेचे झटके पकडून ते सुरक्षितपणे अर्थिंग ग्रिडकडे वळवतो."
+      },
+      "step5": {
+        "step": 5,
+        "title": "सिस्टिम कमिशनिंग आणि मॉनिटरिंग सेटअप",
+        "desc": "तंत्रज्ञ पॅनेल स्ट्रिंग व्होल्टेज, फेज सिक्वेन्स आणि इन्व्हर्टर सेटिंग तपासतात. नंतर इन्व्हर्टर तुमच्या Wi-Fi शी कनेक्ट केला जातो, ज्यामुळे सिस्टिमची कार्यक्षमता रिअल-टाइममध्ये मॉनिटर करता येते."
+      }
+    },
+
+    "components": {
+      "comp1": {
+        "icon": "comp1",
+        "title": "सोलर पॅनेल",
+        "description": "सोलर सिस्टिममधील सर्वात दिसणारा भाग म्हणजे सोलर पॅनेल. ते छतावर दक्षिण दिशेकडे बसवले जातात. सूर्यप्रकाश पडल्यावर हे पॅनेल त्याला शोषून वीजेमध्ये रूपांतर करतात.",
+        "note": "पॅनेलमधून मिळणारी सौर वीज ही DC असते. घरांमध्ये AC वीज वापरली जाते, त्यामुळे DC ला AC मध्ये बदलण्यासाठी सोलर इन्व्हर्टर आवश्यक आहे."
+      },
+
+      "comp2": {
+        "icon": "comp2",
+        "title": "सोलर इन्व्हर्टर",
+        "description": "सोलर इन्व्हर्टरशिवाय संपूर्ण सोलर सिस्टिम निरुपयोगी ठरेल. इन्व्हर्टर DC ला AC मध्ये बदलतो.",
+        "note": "हा बदल आवश्यक आहे कारण घरात चालणाऱ्या उपकरणांसाठी AC वीजच उपयुक्त असते."
+      },
+
+      "comp3": {
+        "icon": "comp3",
+        "title": "सोलर मॉड्यूल माउंटिंग स्ट्रक्चर",
+        "description": "हे सोलर पॅनेलला आधार देणारे स्तंभ आहेत. ते उच्च गुणवत्तेचे असणे आवश्यक आहे, जेणेकरून वादळ आणि चक्रीवादळातील जोरदार वारे आणि पॅनेलचे वजन 25 वर्षे सहन करू शकतील.",
+        "features": [
+          "170 kmph पर्यंत वाऱ्याचा वेग सहन करण्याची क्षमता",
+          "80 मायक्रॉन HDGI कोटिंगमुळे अनेक वर्षे गंज-प्रतिरोधक"
+        ]
+      },
+
+      "comp4": {
+        "icon": "comp4",
+        "title": "सोलर अॅक्सेसरीज",
+        "description": "सोलर सिस्टिमच्या सेटअपमध्ये या लहान घटकांचेही महत्त्व तितकेच आहे.",
+        "accessories": [
+          {
+            "name": "AC आणि DC केबल्स",
+            "desc": "सोलर पॅनेलचे वायरिंग आणि सोलर ग्रिडमधील इतर भागांना जोडण्यासाठी आवश्यक."
+          },
+          {
+            "name": "DC कॉम्बिनर बॉक्स",
+            "desc": "DC कॉम्बिनर बॉक्स म्हणजे विलगण बॉक्ससारखे काम करतो. पॅनेलमधून येणारे सर्व DC केबल्स या बॉक्समध्ये एकत्र केले जातात. पॅनेलमधून येणारी DC वीज 1,000 व्होल्ट किंवा अधिक असू शकते, त्यामुळे हा बॉक्स अत्यंत आवश्यक असतो."
+          },
+          {
+            "name": "AC कॉम्बिनर बॉक्स",
+            "desc": "इन्व्हर्टरमधून येणारी AC वीज AC कॉम्बिनर बॉक्समध्ये एकत्र केली जाते."
+          },
+          {
+            "name": "अर्थिंग स्ट्रिप्स आणि वायर",
+            "desc": "संपूर्ण ऑन-ग्रिड सिस्टिम सेटअप झाल्यानंतर योग्य अर्थिंग केली जाते."
+          }
+        ]
+      },
+
+      "comp5": {
+        "icon": "comp5",
+        "title": "द्विदिशा मीटर",
+        "description": "नेट मीटर म्हणूनही ओळखला जातो. तो ग्रिडला पुरवलेली आणि ग्रिडमधून घेतलेली वीज मोजतो.",
+        "note": "ऑन-ग्रिड सोलर सिस्टिम सुरू होण्यासाठी सामान्य मीटर ऐवजी द्विदिशा मीटर बसवणे आवश्यक आहे."
+      }
+    },
+
+    "workingSteps": {
+      "step1": {
+        "title": "सौर ऊर्जा संकलन आणि DC वीज निर्मिती",
+        "content": "सोलर पॅनेलमधील PV सेल सूर्यप्रकाशातील फोटॉन्स शोषून इलेक्ट्रॉन्स हलवतात आणि त्यामुळे DC वीज तयार होते. पॅनेलची कार्यक्षमता, सूर्यप्रकाशाची तीव्रता आणि सावली यावर DC आउटपुट अवलंबून असते."
+      },
+      "step2": {
+        "title": "सोलर इन्व्हर्टरद्वारे DC-ते-AC रूपांतरण",
+        "content": "इन्व्हर्टर तुमच्या सोलर सिस्टिमचे हृदय आहे. तो पॅनेल-निर्मित DC ला AC मध्ये बदलतो, जो भारतात 50 Hz वारंवारता आणि स्थानिक ग्रिड व्होल्टेजशी जुळतो."
+      },
+      "step3": {
+        "title": "द्विदिशा मीटर समाकलन",
+        "content": "AC मध्ये रूपांतरण झालेली वीज द्विदिशा मीटरमधून जाते, जो आयात व निर्यात झालेल्या दोन्ही युनिट्सची अचूक नोंद ठेवतो."
+      },
+      "step4": {
+        "title": "घरगुती वापरासाठी सोलर-निर्मित AC वीज",
+        "content": "दिवसा घरातील लाईट, फॅन, फ्रिज, AC सारखी उपकरणे प्रथम सोलर वीज वापरतात, ज्यामुळे ग्रिडवर अवलंबन कमी होते."
+      },
+      "step5": {
+        "title": "जादा सौर वीज ग्रिडला पुरवणे",
+        "content": "जर पॅनेलने तयार केलेली वीज घराच्या वापरापेक्षा जास्त असेल, तर जादा वीज आपोआप ग्रिडमध्ये पाठवली जाते."
+      },
+      "step6": {
+        "title": "गरजेनुसार ग्रिडमधून वीज आयात करणे",
+        "content": "रात्री किंवा ढगाळ हवामानात सोलर उत्पादन कमी झाल्यास, मीटर ग्रिडमधून वीज घेतो आणि घर निर्विघ्न चालू ठेवतो."
+      }
+    }
   }
+},
+"SolarBuyingguid": {
+  "hero": {
+    "title": "ऑन-ग्रिड सोलर सिस्टम खरेदी मार्गदर्शक",
+    "subtitle": "किंमती, अनुदान, फायदे आणि तोटे उघड केले"
+  },
+  "overview": {
+    "heading": "ऑन-ग्रिड सोलर सिस्टमचे अवलोकन",
+    "para1": "ऑन-ग्रिड सोलर सिस्टम, ज्याला ग्रिड-टायड सिस्टम देखील म्हणतात, हे थेट मुख्य वीज ग्रिडशी जोडलेले असते. महाराष्ट्रात, छतावरील ऑन-ग्रिड सोलर सिस्टम बसवणाऱ्या घरांना PM-सूर्य घर मुक्त वीज योजना अंतर्गत सरकारी अनुदान मिळू शकते. सामान्यतः अनुदानाची रक्कम सिस्टिमच्या क्षमतेनुसार आणि पात्रतेनुसार ₹30,000 ते ₹78,000 पर्यंत असते.",
+    "priceExamplesTitle": "किंमत उदाहरणे:",
+    "priceExample1": "3 kW ऑन-ग्रिड सोलर सिस्टमची महाराष्ट्रातील अनुदानासह किंमत: अंदाजे ₹1,12,000 – ₹1,20,000",
+    "priceExample2": "5 kW ऑन-ग्रिड सोलर सिस्टमची महाराष्ट्रातील अनुदानासह किंमत: अंदाजे ₹2,07,000 – ₹2,20,000",
+    "note": "*कृपया नोंद घ्या: या किंमती 16 नोव्हेंबर 2025 नुसार महाराष्ट्रासाठी अंदाजे आहेत. अंतिम खर्च शहर, DISCOM अटी (MSEDCL, BEST, TATA Power), पॅनेल प्रकार, इन्स्टॉलेशन साइट आणि इतर लागू शुल्कांनुसार बदलू शकतो."
+  },
+  "whatIs": {
+    "heading": "ऑन-ग्रिड सोलर सिस्टम म्हणजे काय?",
+    "para1": "ऑन-ग्रिड सोलर सिस्टम (ग्रिड-टायड) द्विदिशात्मक मीटर (नेट मीटर) मार्फत युटिलिटी ग्रिडशी थेट जोडले जाते. भारतातील बहुतेक घरे ज्यांच्याकडे स्थिर वीज पुरवठा आहे, ती ऑन-ग्रिड सोलर सिस्टमची निवड करतात कारण ही प्रणाली संपूर्ण घराच्या ऊर्जा गरजा पूर्ण करण्यास सक्षम असते.",
+    "para2": "ऑन-ग्रिड सोलर सिस्टम अनेक घटकांचा काळजीपूर्वक केलेला मेळ आहे, जो सूर्यप्रकाशाचे वीजेमध्ये रुपांतर करण्यासाठी एकत्र काम करतो:",
+    "list": [
+      "सोलर पॅनेल्स",
+      "एक सोलर इन्व्हर्टर",
+      "सोलर मॉड्यूल माउंटिंग स्ट्रक्चर",
+      "द्विदिशात्मक मीटर",
+      "सोलर अ‍ॅक्सेसरीज (AC आणि DC केबल्स, AC आणि DC कॉम्बिनर बॉक्स, कंड्युट ट्रे, लाइटनिंग अरेस्टर, MC4 कनेक्टर्स)"
+    ]
+  },
+  "didYouKnow": {
+    "title": "आपणास माहीत आहे का?",
+    "text": "योग्य प्रकारे देखभाल केल्यास ऑन-ग्रिड सोलर सिस्टम 25 वर्षांपर्यंत टिकू शकते. लोकप्रिय समजुतींच्या विरुद्ध, स्प्रिंकलर्सने पॅनेल्स धुतल्यास त्यांचे नुकसान होऊ शकते. आपली प्रणाली उच्च कार्यक्षमतेने चालू ठेवण्यासाठी, व्यावसायिक आफ्टर-सेल्स सेवांची नोंदणी करणे अत्यंत आवश्यक आहे."
+  },
+  "componentsSection": {
+    "heading": "ऑन-ग्रिड सोलर सिस्टमचे घटक कोणते?",
+    "intro": "येथे प्रत्येक घटक कसा कार्य करतो आणि मिळून तुमच्या घराला वीजपुरवठा कसा करतो, याचे वर्णन आहे.",
+    "didYouKnowTitle": "आपणास माहीत आहे का?",
+    "mountingStructurePara1": "सर्वोत्तम सोलर मॉड्यूल माउंटिंग स्ट्रक्चर प्रिसिजन लॅबमध्ये तयार केले जातात. ते स्टीलवर हॉट-डिप गॅल्वनायझिंग कोटिंग करून गंज-प्रतिरोधक बनवले जातात.",
+    "mountingStructurePara2": "उदाहरणार्थ, SolarSquare चा Intelligent WindPro Mount™ 2.0, जो IIT-बॉम्बे मान्यताप्राप्त आहे, हे करू शकतो:"
+  },
+  "mountingFeatures": [
+    "उच्च वाऱ्याच्या दाबाला प्रतिकार आणि कंपन कमी करणे",
+    "सोप्या उंची आणि तिरपा कोन समायोजनाची सुविधा",
+    "दीर्घकाळ गंजमुक्त कार्यप्रदर्शन"
+  ],
+  "accessoriesNote": "कृपया नोंद घ्या: सर्व DC केबल कनेक्शन MC4 कनेक्टर्स वापरून केले जातात.",
+  "netMetering": {
+    "heading": "नेट मीटरिंग कशी मदत करते",
+    "para1": "नेट मीटर डिस्कॉमला सोलर सिस्टमद्वारे निर्माण केलेली वीज, वापरलेली वीज, ग्रिडला पुरवलेली वीज आणि ग्रिडमधून घेतलेली वीज याचे ट्रॅकिंग करण्यास मदत करते.",
+    "para2": "प्रत्येक महिन्याच्या शेवटी वीज बिल तयार होताना, द्विदिशात्मक मीटरमधील रीडिंग खालील गोष्टी दाखवतात:",
+    "list": [
+      "ग्रिडला किती युनिट्स पुरवली",
+      "ग्रिडमधून किती युनिट्स घेतली"
+    ],
+    "ifSupplyMore": "जर तुम्ही वापरल्यापेक्षा अधिक युनिट्स ग्रिडला पुरवल्या: त्या युनिट्स तुमच्या बिलातून वजा केल्या जातात. त्यामुळे बिल आणखी कमी होते.",
+    "ifUseExtra": "जर तुम्ही ग्रिडमधून अतिरिक्त युनिट्स वापरल्या: त्या युनिट्स तुमच्या बिलामध्ये सोलर प्लांटने निर्माण केलेल्या युनिट्सव्यतिरिक्त जोडल्या जातात."
+  },
+  "howItWorks": {
+    "heading": "ऑन-ग्रिड सोलर सिस्टम कसे कार्य करते?",
+    "introPara": "आता तुम्ही ऑन-ग्रिड सोलर सिस्टमचे अनेक घटक कसे एकत्र काम करतात हे पाहिले आहे, तर सूर्यप्रकाशाचे वीजेमध्ये रूपांतर कसे होते ते पाहू.",
+    "boldHeading": "ऑन-ग्रिड सोलर सिस्टम अशा प्रकारे कार्य करते:"
+  },
+  "subsidySection": {
+    "heading": "ऑन-ग्रिड साठी सोलर अनुदान",
+    "para": "भारत सरकार घरांसाठी ऑन-ग्रिड सोलर सिस्टम बसवल्यास अनुदान देते. हे अनुदान भारतातील सर्व राज्यांसाठी समान आहे.",
+    "table": {
+      "headers": {
+        "size": "सोलर सिस्टमचा आकार",
+        "subsidy": "सोलर अनुदान (PM Surya Ghar)"
+      },
+      "rows": [
+        { "size": "1 kWp", "subsidy": "₹30,000" },
+        { "size": "2 kWp", "subsidy": "₹60,000" },
+        { "size": "3 kWp आणि अधिक", "subsidy": "₹78,000" }
+      ]
+    }
+  },
+  "advantages": {
+    "heading": "ऑन-ग्रिड सोलर सिस्टमचे फायदे"
+  },
+  "limitations": {
+    "heading": "ऑन-ग्रिड सोलर सिस्टमची मर्यादा",
+    "powerOutagesTitle": "वीज पुरवठा खंडित होणे",
+    "powerOutagesPara": "ग्रिडशी जोडलेले असणे ही सुविधा असल्याप्रमाणेच मर्यादाही आहे. ग्रिडमधून वीज गेली तर ऑन-ग्रिड सोलर सिस्टम स्वयंचलितपणे बंद होते. वीजपुरवठ्यातील ही व्यत्यय म्हणजेच पॉवर आउटेज.",
+    "antiIslandingTitle": "अँटी-आयलँडिंग संरक्षण",
+    "antiIslandingPara": "ग्रिड फेल झाल्यास ऑन-ग्रिड सोलर इन्व्हर्टर स्वयंचलितपणे बंद होण्यासाठी डिझाइन केलेले असते, कारण हे सुरक्षिततेसाठी अत्यावश्यक आहे. हे फीचर विद्युत देखभाल कर्मचाऱ्यांना ग्रिडवर काम करताना होणाऱ्या विजेच्या धक्क्यापासून संरक्षण देते."
+  },
+  "comparisonBox": {
+    "title": "मग कोणता चांगला: ऑफ-ग्रिड की ऑन-ग्रिड?",
+    "para": "शहरी भागात जिथे ग्रिड विश्वसनीय असतो, तिथे घराच्या ऊर्जा गरजा पूर्ण करण्यासाठी ऑन-ग्रिड सोलर सिस्टम सर्वात उपयुक्त आहे.",
+    "bullets": [
+      "बॅटरीच्या देखभालीशी संबंधित कोणताही खर्च नाही",
+      "ऑफ-ग्रिड सिस्टमपेक्षा अधिक परवडणारे",
+      "सरकार ऑन-ग्रिड सिस्टिमवर अनुदान देते, ऑफ-ग्रिडवर नाही"
+    ],
+    "conclusion": "✅ तुमचा पॉवर ग्रिड विश्वसनीय असेल तर ऑन-ग्रिड सोलर सिस्टममध्ये गुंतवणूक करणे नेहमीच सर्वोत्तम पर्याय आहे!"
+  },
+  "installation": {
+    "heading": "घरी ऑन-ग्रिड सोलर सिस्टम कसे बसवावे?",
+    "importantNoteTitle": "⚠️ महत्वाची नोंद:",
+    "importantNotePara": "छतावरील सोलर बसवणे हे DIY काम नाही. तज्ञांना सोपवणे अत्यावश्यक आहे कारण यात छताची क्षमता, सावली नसलेल्या जागा, योग्य तिरपा कोन आणि सुरक्षित इंस्टॉलेशन यांचा अभ्यास आवश्यक असतो."
+  },
+  "whyChoose": {
+    "heading": "आदित्य सोलर एनर्जी का निवडावे?",
+    "tagline": "महागड्या विजेपासून मोफत सौरऊर्जेकडे जाणारी तुमची वाटचाल सोपी करत आहोत!",
+    "features": {
+      "zeroInvestment": {
+        "title": "💰 शून्य गुंतवणूक सोलर योजना",
+        "desc": "सरकारी अनुदान प्रारंभिक डाउन पेमेंट भरते अशी कर्जे आणि वित्तीय पर्याय. 3 ते 120 महिन्यांपर्यंत EMI सुविधा उपलब्ध."
+      },
+      "swiftInstallation": {
+        "title": "⚡ जलद इंस्टॉलेशन",
+        "desc": "कोणतेही एजंट नाहीत. आमची टीम फक्त 8 तासांत संपूर्ण सिस्टिम बसवते."
+      },
+      "afterSales": {
+        "title": "🛠️ मजबूत आफ्टर-सेल्स सपोर्ट",
+        "desc": "5 वर्षांत किमान 45 डीप क्लिनिंग आणि प्रिव्हेंटिव्ह चेकअप व्हिजिट्स."
+      },
+      "leakageGuarantee": {
+        "title": "🛡️ लीक-प्रूफ हमी",
+        "desc": "HILTI AirTight केमिकल अँकरींग तुमच्या छताचे संरक्षण करते. 1 वर्षासाठी ₹1 लाख हमी."
+      },
+      "moneyBack": {
+        "title": "💵 मनी-बॅक हमी",
+        "desc": "भारतामध्ये पहिली आणि एकमेव सोलर कंपनी जी वचन दिलेल्या वीज निर्मितीपेक्षा कमी निर्माण झाल्यास प्रति युनिट ₹8 प्रमाणे पैसे परत देते."
+      }
+    }
+  },
+  "faqs": {
+    "heading": "वारंवार विचारले जाणारे प्रश्न"
+  },
+  "conclusion": {
+    "heading": "निष्कर्ष",
+    "para1": "ऑन-ग्रिड सोलर सिस्टम बसवणे ही एक मोठी गुंतवणूक असते आणि त्याबाबत जागरूक राहणे तुमचा हक्क आहे. योग्य घटकांची निवड केल्यास तुम्ही आज बसवलेली प्रणाली किमान 25 वर्षे टिकू शकते.",
+    "para2": "भारतामधील सोलर पॅनल इन्स्टॉलेशनची किंमत शहरानुसार बदलते आणि ग्राहकांद्वारे उच्च रेटिंग असलेल्या कंपनीवर विश्वास ठेवावा.",
+    "final": "☀️ भारतीय सरकार PM Surya Ghar Muft Bijli Yojana अंतर्गत 1 कोटी घरे सौरांकित करण्याचे लक्ष्य पूर्ण होईपर्यंतच अनुदान उपलब्ध आहे. आत्ताच सोलर घ्या आणि वीजबिलापासून मुक्त व्हा!"
+  },
+  "css": {
+    "fadeInKeyframes": "@keyframes fadeIn { from { opacity: 0; transform: translateY(-10px); } to { opacity: 1; transform: translateY(0); } }",
+    "animateClass": ".animate-fadeIn { animation: fadeIn 0.3s ease-out; }"
+  }
+}
 }
